--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -5,54 +5,73 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: #ececec;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
 header {
-    background-color: #fff;
+    background-color: rgb(42, 46, 40);
     font-family: Georgia, Times, Times New Roman, serif;
     height: 60px;
-    border-bottom: 2px solid #dedede;
+    border-bottom: 2px solid #666;
 }
 
 .logo {
-    background-color: #4aaaa5;
-    color: #fff;
+    background-color: #2eb375;
+    color: rgb(42, 46, 40);
     font-size: 24px;
     font-weight: bold;
     text-align: center;
-    padding: 15px;
+    padding: 15.5px;
     position: relative;
     top: 11px;
+    border-left: 2px #fff solid;
+    border-right: 2px #fff solid;
 }
 
 .logo a {
     color: #fff;
     height: 60px;
 }
+.logo:hover {
+  font-size: 25px;
+  color: #fff;
+  text-decoration: none;
+}
 
 nav {
     float: right;
     font-size: 16px;
     padding-top: 20px;
-    background-color: #fff;
+    
+    background: rgb(42, 46, 40);
+
 }
 
 nav a {
-    color: #666;
+    color: #fff;
     border-right: 1px solid #666;
     padding: 1px 10px;
   }
-
+  nav a:hover {
+    text-decoration: none;
+    color:  #2eb375;
+    
+  }
   nav a:last-child {
     border-right: none;
   }
 
   .main-container {
     padding: 30px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.459);
+    box-shadow: 
+      5px 0px 10px rgba(255, 255, 255, 0.3),
+      -5px 0px 10px rgba(255, 255, 255, 0.3),
+      0px 5px 10px rgba(255, 255, 255, 0.3),
+      0px -5px 10px rgba(255, 255, 255, 0.3);
     height: calc(100vh - 210px);
-    border: 1px solid #dedede;
     overflow: auto;
     position: relative;
     top: 25px;
@@ -61,9 +80,10 @@ nav a {
   
   .main-container h1 {
     font-size: 24px;
-    color: #4aaaa5;
+    color:  rgb(42, 46, 40);
+    text-shadow: 1px 1px 10px white;
     padding: 10px 0;
-    border-bottom: 2px solid #dedede;
+    border-bottom: 2px solid #666;
   }
   
   .main-container img {
@@ -73,7 +93,7 @@ nav a {
   }
   
   .main-container p {
-    color: #777;
+    color: rgb(0, 0, 0);
     line-height: 24px;
     font-size: 16px;
   }
@@ -91,36 +111,58 @@ nav a {
   .text-block {
    position: absolute;
    top: 150%;
-   background-color: teal;
+   background-color: #2eb3758e;
    color: white;
    padding: 1px;
    /* border: orange 1px solid; */
    width: 100%;
    text-align: center;
   }
+  button {
+    background-color: #2eb375;
+  }
+  .form-control {
+    background-color: rgba(42, 46, 40, 0.25);
+    border: none;
+    border-radius: 0px;
+  }
   
+  .form-control::placeholder {
+    color: rgb(42, 46, 40, .75);
+  }
+  .form-control:focus {
+    box-shadow: 0 0 5px #2eb375;
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 1px solid #2eb375;
+    background-color: rgba(42, 46, 40, 0.25);
+  }
+
   footer {
     position: fixed;
-    border-top: 8px solid #4aaaa5;
+    border-top: 8px solid #2eb375;
     bottom: 0;
     width: 100%;
     height: 60px;
     padding: 12px 0;
-    background-color: #666;
+    background-color: rgb(42, 46, 40);
     color: #fff;
     text-align: center;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   }
 
-
-
+  @media screen and (max-width: 1200px) {
+    body {
+      background-size: 1200px;
+    }
+  } 
   @media screen and (max-width: 768px) {
     .mobile {
           width: 100%;
           text-align: center;
           float: none;
           height: 60px;
-          background-color: #4aaaa5;
+          background-color: #2eb375;
       }
     nav {
           width: 100%;
@@ -129,7 +171,7 @@ nav a {
           padding: 10px 2px;
         }
     .bar {
-        background-color: #fff;
+        background-color: rgb(42, 46, 40);
     }
     .main-container {
         position: relative;
@@ -138,5 +180,8 @@ nav a {
     .main-container img {
         margin-right: 5%;
       }
+    .logo {
+      border: none;
+    }  
  
   }
