--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -140,20 +140,36 @@ nav a {
 
   footer {
     position: fixed;
-    border-top: 8px solid #2eb375;
+    /* border-top: 8px solid #2eb375; */
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: auto;
     padding: 12px 0;
-    background-color: rgb(42, 46, 40);
+    /* background-color: rgb(42, 46, 40); */
     color: #fff;
     text-align: center;
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   }
-
-  @media screen and (max-width: 1200px) {
+  .icon {
+    width: 60px;
+  }
+  .gitIcon {
+    width: 30px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  @media screen and (max-width: 1300px) {
     body {
-      background-size: 1200px;
+      background-size: 1300px;
+    }
+  } 
+  @media screen and (max-width: 575px) {
+    .main-container {
+      height: calc(100vh - 250px);
+    }
+    body {
+      background-size: 1350px;
     }
   } 
   @media screen and (max-width: 768px) {
